# rcps-assets

./: .env  Cargo.toml  Dockerfile  assets.stpl  docker-compose.yml  package-lock.json  spec.yaml  sqlx-data.json  tailwind.config.js
configuration/: base.toml  base.yaml  production.toml  production.yaml
migrations/: 20220827165839_create_assets_table.sql  20220908035952_add_serial_id_field.sql  20220911081536_change_primary_key.sql  20220919142437_remove_assets_id_column.sql  20220925122929_create_uploads_table.sql  20221003133841_create_users_table.sql  20240819192221_uuidv7.down.sql  20240819192221_uuidv7.up.sql  20240906122005_create-user-table.up.sql  20240923181757_seed-admin-user.up.sql  20241007150226_create-role-table.up.sql  20241007150910_create-user-table.up.sql  20241007151302_seed-user.up.sql  20241018144415_create-attachments-table.down.sql  20241018144415_create-attachments-table.up.sql  20241024130108_create_asset_types_table.down.sql  20241024130108_create_asset_types_table.up.sql  20241026133856_alter_asset_types_fts.down.sql  20241026133856_alter_asset_types_fts.up.sql  20241104133040_create-asset-items-table.down.sql  20241104133040_create-asset-items-table.up.sql
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  errors.rs  filesystem.rs  lib.rs  main.rs  paginate.rs  session_state.rs  settings.rs  startup.rs  telemetry.rs  utils.rs
src/application/: errors.rs  mod.rs  state.rs  templates.rs
src/application/attachments/: mod.rs  schema.rs
src/application/content/: content_application_service.rs  mod.rs  schema.rs
src/application/crud/: crud_application_service.rs  mod.rs  schema.rs
src/application/http/: mod.rs  server.rs  utils.rs
src/application/http/handlers/: auth.rs  content.rs  mod.rs  oauth.rs
src/application/identityaccess/: identity_application_service.rs  mod.rs  schema.rs
src/application/templates/: mod.rs
src/application/templates/layouts/: auth.rs  settings.rs
src/application/templates/pages/: asset_item_create.rs  asset_item_edit.rs  asset_item_view.rs  asset_items.rs  asset_type_create.rs  asset_type_edit.rs  asset_type_view.rs  asset_types.rs  asset_types_imports_new.rs  login.rs  mod.rs  profile.rs  settings.rs  user_create.rs  user_edit.rs  users.rs
src/application/templates/partials/: alert.rs  form_alert.rs  mod.rs  navbar.rs
src/authentication/: mod.rs  password.rs
src/domain/: add_asset_template.rs  asset.rs  asset_template.rs  assets_template.rs  home_template.rs  mod.rs  templates.rs  upload_status.rs
src/domain/crud/: crud_repository.rs  mod.rs
src/domain/crud/model/: asset_items.rs  asset_types.rs  mod.rs
src/domain/filesystem/: attachment_repository.rs  filesystem_repository.rs  filesystem_service.rs  image_utils.rs  mod.rs  models.rs  persistence_service.rs
src/domain/identityaccess/model/: credentials.rs  file_service.rs  (+6 more)
src/infastructure/services/: google_oauth_service.rs  local_persistence_service.rs  mod.rs  postgres_attachment_repository.rs  postgres_crud_repository.rs  postgres_filesystem_repository.rs  postgres_user_repository.rs
src/routes/: error.rs  get_image.rs  mod.rs
src/routes/asset_items/: get.rs  mod.rs
src/routes/assets/: assets.rs  mod.rs
src/routes/home/: home.html  mod.rs
src/routes/users/: mod.rs
static/styles/: output.css
temp_files/: 0ca41d4e-c113-4882-acd2-57ae7bd36c34.csv  f824ce7a-0f19-4758-a543-e230f8f00466.csv
templates/: add_asset.html  add_asset.stpl  asset.stpl  assets.stpl  edit_asset.stpl  error.stpl  home.stpl  nav_style.stpl  new_upload.stpl  search_style.stpl  uploads.stpl
templates/layouts/: auth.html  main.html  settings.html
templates/pages/: asset_item_create.html  asset_item_edit.html  asset_item_view.html  asset_items.html  asset_type_create.html  asset_type_edit.html  asset_type_view.html  asset_types.html  asset_types_imports_new.html  create_user.html  login.html  profile.html  settings.html  user_create.html  user_edit.html  users.html
templates/partials/: alert.html  error.html  favicon.html  form_alert.html  navbar.html  warning.html
templates/partials/crud/: asset_types_search_results.html
templates/partials/users/: roles_list.html
tests/api/: add_asset.rs  health_check.rs  helpers.rs  main.rs
(+45 files in other folders)
