[package]
name = "rcps-assets"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rcps-assets"


[dependencies]
thiserror = "1.0.32"
anyhow = "1.0.62"
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-web = "4"
uuid = { version = "1", features = ["v4", "serde"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = "1.0.144"
serde-aux = "3.1.0"
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.1"

[dev-dependencies]
once_cell = "1.13.1"
claim = "0.5.0"
