[package]
name = "rcps-assets"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rcps-assets"


[dependencies]
actix-web = "4"
thiserror = "1.0.32"
anyhow = "1.0.62"
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = "1.0.144"
serde-aux = "3.1.0"
serde_json = "1"
serde_urlencoded = "0.7"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.1"
tracing-actix-web = "0.6"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = { version = "0.6", features = ["redis-rs-tls-session"] }
actix-web-lab = "0.16"
actix-files = "0.6"
actix-multipart = "0.4.0"
validator = { version = "0.16", features = ["derive"] }
unicode-segmentation = "1.9.0"
chrono = "0.4.22"
sailfish = "0.4.0"
csv = "1.1"

[dev-dependencies]
once_cell = "1.13.1"
claim = "0.5.0"
