[package]
name = "htmx-google-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["cookie", "query"] }
axum-login = "0.16.0"
axum-messages = "0.7.0"
axum_typed_multipart = "0.13.1"
tokio = { version = "1.39", features = ["full"] }
tokio-util = "0.7.12"
tower-http = { version = "0.5.2", features = ["trace", "fs", "compression-br"] }
tower-layer = "0.3.3"
tower-sessions = { version = "0.13.0", features = ["signed",] }
time = {version = "0.3", default-features = false, features = ["formatting", "macros", "serde", "parsing", "local-offset"]}
serde = { version = "1.0.208", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.125"
sqlx = { version = "0.8.0", features = ["runtime-async-std-native-tls", "postgres", "sqlite", "chrono", "uuid", "macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
derive_more = { version = "1", features = ["from", "add", "display", "as_ref"] }
thiserror = "1.0.63"
anyhow = "1.0.86"
futures = "0.3.30"
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "local-time"] }
tracing-appender = "0.2.3"
uuid = { version = "1.10.0", features = ["v4", "v7", "serde"] }
config = "0.14.0"
google-oauth = "1.11.3"
password-auth = "1.0.0"
oauth2 = "4.4.2"
compact_str = { version = "0.8", features = ["serde"] }
reqwest = { version = "0.12.7", features = ["json"] }
garde = { version = "0.20.0", features = ["full"] }
blake3 = "1.5.4"
mime_guess = "=2.0.5"
tempfile = "3.13.0"
image = "0.25.4"
webp = "0.3.0"
rayon = "1.10.0"